[package]
name = "but-agent-shared"
version = "0.0.0"
edition = "2024"
authors = ["GitButler <gitbutler@gitbutler.com>"]
publish = false

[lib]
doctest = false

[features]
# Set when building in test-mode to enable features that help with generating repeatable tests.
testing = []

[dependencies]
serde = { workspace = true, features = ["std"] }
serde_json.workspace = true
uuid.workspace = true
but-agent.workspace = true
gitbutler-command-context.workspace = true

[dev-dependencies]
