[package]
name = "but-agent"
version = "0.0.0"
edition = "2024"
authors = ["GitButler <gitbutler@gitbutler.com>"]
publish = false

[lib]
doctest = false

[features]
# Set when building in test-mode to enable features that help with generating repeatable tests.
testing = []

[dependencies]
serde = { workspace = true, features = ["std"] }
serde_json.workspace = true
toml.workspace = true
gitbutler-secret.workspace = true
uuid.workspace = true
reqwest = { version = "0.12", features = ["blocking", "json"] }

[dev-dependencies]
