[package]
name = "but-agentlog"
version = "0.0.0"
edition.workspace = true
authors.workspace = true
publish = false
rust-version.workspace = true
description = "Capture coding-agent session logs into Git metadata"

[dependencies]
anyhow.workspace = true
bstr.workspace = true
but-core.workspace = true
but-meta = { workspace = true, features = ["legacy"] }
but-workspace.workspace = true
chrono = { workspace = true, features = ["clock"] }
clap.workspace = true
gix.workspace = true
git-meta-lib.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true

[dev-dependencies]
but-testsupport.workspace = true
tempfile.workspace = true

[lints]
workspace = true
