[package]
name = "but-api"
version = "0.0.0"
edition = "2024"
repository = "https://github.com/gitbutlerapp/gitbutler"
license-file = "../../LICENSE.md"
description = "A GitButler CLI tool"
authors = ["GitButler <gitbutler@gitbutler.com>"]
readme = "../../README.md"
publish = false
rust-version = "1.89"

[lib]
doctest = false

[features]
default = []
## Provide Tauri commands automatically where possible, to avoid duplication.
tauri = ["dep:tauri"]
## When paths are turned into strings they are lossy. Also provide a `_bytes` variant of such fields with the original value
## for lossless use.
path-bytes = ["dep:bstr"]
## Make legacy functionality available.
legacy = [
    "dep:gitbutler-user",
    "dep:gitbutler-project",
    "dep:gitbutler-branch",
    "dep:gitbutler-branch-actions",
    "dep:gitbutler-commit",
    "dep:gitbutler-command-context",
    "dep:gitbutler-reference",
    "dep:gitbutler-stack",
    "dep:gitbutler-repo",
    "dep:gitbutler-repo-actions",
    "dep:gitbutler-edit-mode",
    "dep:gitbutler-operating-modes",
    "dep:gitbutler-sync",
    "dep:gitbutler-oplog",
]


[dependencies]
but-settings.workspace = true
but-github = { workspace = true, features = ["legacy"] }
but-secret.workspace = true
but-workspace = { workspace = true, features = ["legacy"] }
but-worktrees.workspace = true
but-core.workspace = true
but-gerrit.workspace = true
but-hunk-assignment.workspace = true
but-action.workspace = true
but-api-macros.workspace = true
but-rebase.workspace = true
but-serde.workspace = true
but-graph.workspace = true
but-meta = { workspace = true, features = ["legacy"] }
but-claude.workspace = true
but-broadcaster.workspace = true
but-cherry-apply.workspace = true
but-hunk-dependency.workspace = true
but-path.workspace = true
but-forge-storage.workspace = true
but-feedback.workspace = true
but-error.workspace = true
but-rules.workspace = true
but-oxidize.workspace = true
but-forge.workspace = true

gitbutler-user = {workspace = true, optional = true}
gitbutler-project = {workspace = true, optional = true}
gitbutler-branch = {workspace = true, optional = true}
gitbutler-branch-actions = {workspace = true, optional = true}
gitbutler-commit = {workspace = true, optional = true}
gitbutler-command-context = {workspace = true, optional = true}
gitbutler-reference = {workspace = true, optional = true}
gitbutler-stack = {workspace = true, optional = true}
gitbutler-repo = {workspace = true, optional = true}
gitbutler-repo-actions = {workspace = true, optional = true}
gitbutler-edit-mode = {workspace = true, optional = true}
gitbutler-operating-modes = {workspace = true, optional = true}
gitbutler-sync = {workspace = true, optional = true}
gitbutler-oplog = {workspace = true, optional = true}

tauri = { version = "^2.9.2", features = ["unstable"], optional = true } # For the #[tauri::command(async)] macro only

bstr = { workspace = true, optional = true }
schemars.workspace = true
serde.workspace = true
tokio = { workspace = true, features = ["full"] }
anyhow.workspace = true
serde_json.workspace = true
tracing.workspace = true
serde-error = "0.1.3"
gix = { workspace = true, features = ["worktree-mutation" ] }
git2.workspace = true
open.workspace = true
url = "2.5"
uuid.workspace = true
