[package]
name = "but-api"
version = "0.0.0"
edition.workspace = true
repository.workspace = true
license-file = "../../LICENSE.md"
description = "A GitButler CLI tool"
authors.workspace = true
readme = "../../README.md"
publish = false
rust-version.workspace = true

[package.metadata.cargo-machete]
ignored = [
    # Used by macro-generated async API glue that machete does not detect reliably.
    "futures",
    "tokio",
    # Used only when the `napi` feature is enabled for Node bindings.
    "napi",
    # Used only when the `napi` feature is enabled for Node bindings.
    "napi-derive",
    # Used only when the `tauri` feature is enabled for Tauri command bindings.
    "tauri",
]

[lib]
doctest = false

[features]
default = []
## Provide Tauri commands automatically where possible, to avoid duplication.
## Needs "legacy" as long as it needs legacy project support.
tauri = ["dep:tauri", "legacy"]
## Provide napi bindings for Node.js via napi-rs.
## Needs "legacy" as long as it needs legacy project support.
napi = ["dep:napi", "dep:napi-derive", "legacy", "export-schema"]
## When paths are turned into strings they are lossy. Also provide a `_bytes` variant of such fields with the original value
## for lossless use.
path-bytes = []
## Generate JSON schemas for TypeScript type generation via schemars.
export-schema = [
    "but-error/export-schema",
    "but-workspace/export-schema",
    "but-hunk-assignment/export-schema",
    "gitbutler-project/export-schema",
    "but-rebase/export-schema",
    "gitbutler-operating-modes/export-schema",
    "gitbutler-branch/export-schema",
    "gitbutler-branch-actions/export-schema",
    "gitbutler-edit-mode/export-schema",
    "gitbutler-oplog/export-schema",
    "but-gerrit/export-schema",
]
## Make legacy functionality available.
legacy = [
    "but-ctx/legacy",
    "but-workspace/legacy",
    "dep:but-askpass",
    "dep:gitbutler-user",
    "dep:gitbutler-project",
    "dep:gitbutler-branch",
    "dep:gitbutler-branch-actions",
    "dep:gitbutler-commit",
    "dep:gitbutler-reference",
    "dep:gitbutler-repo",
    "dep:gitbutler-edit-mode",
    "dep:gitbutler-operating-modes",
    "dep:gitbutler-oplog",
    "dep:gitbutler-git",
    "dep:but-action",
    "dep:but-rules",
    "dep:but-gerrit",
    "dep:but-worktrees",
    "dep:but-cherry-apply",
]

[dependencies]
but-serde.workspace = true
but-path.workspace = true
but-api-macros.workspace = true
but-error.workspace = true
but-core.workspace = true
but-graph.workspace = true
but-ctx.workspace = true
but-workspace.workspace = true
but-settings.workspace = true
but-secret.workspace = true
but-rebase.workspace = true
but-db.workspace = true
but-forge.workspace = true
but-forge-storage.workspace = true
but-hunk-assignment.workspace = true
but-hunk-dependency.workspace = true
but-github.workspace = true
but-gitlab.workspace = true
# 'legacy' is needed while this is only a sketch of what the oplog could be.
# For single-branch testing, we also want the oplog and just take it as it is.
but-oplog = { workspace = true, features = ["legacy"] }
but-askpass = { workspace = true, optional = true }
itertools.workspace = true

# What follows is *basically* newly written crates that are built on top of legacy,
# so need some refactoring/rethinking to become usable.
but-cherry-apply = { workspace = true, optional = true }
but-action = { workspace = true, optional = true }
but-rules = { workspace = true, optional = true }
but-gerrit = { workspace = true, optional = true }
but-worktrees = { workspace = true, optional = true }
gitbutler-user = { workspace = true, optional = true }
gitbutler-project = { workspace = true, optional = true }
gitbutler-branch = { workspace = true, optional = true }
gitbutler-branch-actions = { workspace = true, optional = true }
gitbutler-commit = { workspace = true, optional = true }
gitbutler-reference = { workspace = true, optional = true }
gitbutler-repo = { workspace = true, optional = true }
gitbutler-edit-mode = { workspace = true, optional = true }
gitbutler-operating-modes = { workspace = true, optional = true }
gitbutler-oplog = { workspace = true, optional = true }
gitbutler-git = { workspace = true, optional = true }
tauri = { version = "^2.10.3", features = [
    "unstable",
], optional = true } # For the #[tauri::command(async)] macro only
napi = { version = "3.8.5", features = [
    "serde-json",
    "tokio_rt",
], optional = true }
napi-derive = { version = "3.5.4", optional = true }
boolean-enums.workspace = true
bstr = { workspace = true }
schemars.workspace = true
serde.workspace = true
futures.workspace = true
tokio = { workspace = true, features = ["full"] }
anyhow.workspace = true
serde_json.workspace = true
tracing.workspace = true
serde-error = "0.1.3"
gix = { workspace = true, features = ["worktree-mutation"] }
open.workspace = true
url.workspace = true
which = "8.0.2"
but-schemars.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.3.2", default-features = false, features = ["std", "NSWorkspace"] }
objc2-foundation = { version = "0.3.2", default-features = false, features = ["std", "NSString", "NSURL"] }

[dev-dependencies]
but-api = { path = ".", features = ["legacy"] }
but-testsupport.workspace = true
insta.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["full"] }

[lints]
workspace = true
