[package]
name = "but-auto"
version = "0.0.0"
edition = "2024"
authors = ["GitButler <gitbutler@gitbutler.com>"]
publish = false

[lib]
doctest = false
test = false

[dependencies]
serde = { workspace = true, features = ["std"] }
serde-error = "0.1.3"
anyhow = "1.0.98"
strum = { version = "0.27", features = ["derive"] }
gix.workspace = true
gitbutler-command-context.workspace = true
gitbutler-stack.workspace = true
gitbutler-operating-modes.workspace = true
gitbutler-branch-actions.workspace = true
gitbutler-branch.workspace = true
gitbutler-oplog.workspace = true
gitbutler-oxidize.workspace = true
but-core.workspace = true
but-workspace.workspace = true
but-hunk-assignment.workspace = true
