[package]
name = "but-bot"
version = "0.1.0"
edition = "2024"
authors = ["GitButler <gitbutler@gitbutler.com>"]
publish = false
rust-version = "1.89"
[lib]
doctest = false
test = false

[dependencies]
schemars = "0.9.0"
serde = { workspace = true, features = ["std"] }
serde_json = "1.0.145"
anyhow = "1.0.100"
uuid.workspace = true
gix.workspace = true
but-tools.workspace = true
but-action.workspace = true
gitbutler-command-context.workspace = true
gitbutler-project.workspace = true