[package]
name = "but-bot"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
publish = false
rust-version.workspace = true

[lib]
doctest = false
test = false

[dependencies]
but-tools.workspace = true
but-action.workspace = true
but-ctx.workspace = true

gitbutler-project.workspace = true

schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
uuid.workspace = true
gix.workspace = true