[package]
name = "but-claude"
version = "0.0.0"
edition = "2024"
authors = ["GitButler <gitbutler@gitbutler.com>"]
publish = false

[dependencies]
anyhow = "1.0.99"
serde.workspace = true
serde_json = "1.0.143"
serde_json_lenient.workspace = true
strum = { version = "0.27", features = ["derive"] }
chrono = { version = "0.4.41" }
uuid.workspace = true
gix.workspace = true
but-core.workspace = true
but-action.workspace = true
but-broadcaster.workspace = true
but-db.workspace = true
but-graph.workspace = true
but-rules.workspace = true
but-settings.workspace = true
but-hunk-assignment.workspace = true
but-workspace.workspace = true
but-path.workspace = true
gitbutler-branch.workspace = true
gitbutler-stack.workspace = true
gitbutler-project.workspace = true
gitbutler-command-context.workspace = true
gitbutler-branch-actions.workspace = true
tokio = { workspace = true, features = ["full"] }
dirs.workspace = true
rmcp.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "std",
    "fmt",
] }
nix = { version = "0.30.1", features = ["signal"] }
notify-rust = { workspace = true }
serde_yaml = "0.9"
