[package]
name = "but-claude"
version = "0.0.0"
edition = "2024"
authors = ["GitButler <gitbutler@gitbutler.com>"]
publish = false
rust-version = "1.89"

[lib]
doctest = false

[dependencies]
but-core.workspace = true
but-action.workspace = true
but-db.workspace = true
but-meta = { workspace = true, features = ["legacy"] }
but-rules.workspace = true
but-settings.workspace = true
but-hunk-assignment.workspace = true
but-workspace = { workspace = true, features = ["legacy"] }
but-path.workspace = true
but-ctx.workspace = true

gitbutler-branch.workspace = true
gitbutler-stack.workspace = true
gitbutler-project.workspace = true
gitbutler-branch-actions.workspace = true

anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_json_lenient.workspace = true
strum = { version = "0.27", features = ["derive"] }
chrono.workspace = true
uuid.workspace = true
gix.workspace = true
tokio = { workspace = true, features = ["full"] }
dirs.workspace = true
rmcp.workspace = true
tracing.workspace = true
nix = { version = "0.30.1", features = ["signal"] }
notify-rust = { workspace = true }
url.workspace = true
