[package]
name = "but-claude"
version = "0.0.0"
edition.workspace = true
authors.workspace = true
publish = false
rust-version.workspace = true

[lib]
doctest = false

[dependencies]
but-core.workspace = true
but-action.workspace = true
but-db = { workspace = true, features = ["poll"] }
but-rules.workspace = true
but-settings.workspace = true
but-hunk-assignment.workspace = true
but-workspace = { workspace = true, features = ["legacy"] }
but-path.workspace = true
but-ctx = { workspace = true, features = ["legacy"] }
but-llm.workspace = true
gitbutler-branch.workspace = true
gitbutler-stack.workspace = true
gitbutler-branch-actions.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_json_lenient.workspace = true
strum = { version = "0.27", features = ["derive"] }
chrono.workspace = true
uuid.workspace = true
gix.workspace = true
tokio = { workspace = true, features = ["full"] }
dirs.workspace = true
tracing.workspace = true
notify-rust = { workspace = true }
url.workspace = true
futures.workspace = true
claude-agent-sdk-rs = { git = "https://github.com/gitbutlerapp/claude-agent-sdk-rs", rev = "b5e32cd6e8e3df4f2ac2d1aa1c90b66688c3d04c" }

[lints]
workspace = true
