[package]
name = "but-cli"
version = "0.0.0"
edition = "2021"
authors = ["GitButler <gitbutler@gitbutler.com>"]
publish = false
rust-version = "1.74"

[[bin]]
name = "but-cli"
path = "src/main.rs"
doctest = false

[dependencies]
gitbutler-project.workspace = true
but-core.workspace = true
but-workspace.workspace = true

clap = { version = "4.5.23", features = ["derive", "env"] }
anyhow.workspace = true
tracing-forest = { version = "0.1.6" }
tracing-subscriber.workspace = true
tracing.workspace = true
