[package]
name = "but-cli"
version = "0.0.0"
edition = "2024"
authors = ["GitButler <gitbutler@gitbutler.com>"]
publish = false

[[bin]]
name = "but-cli"
path = "src/main.rs"
doctest = false

[features]
# To help produce stable commits in test-cases.
testing = ["dep:gitbutler-commit"]

[dependencies]
gitbutler-command-context.workspace = true
gitbutler-project.workspace = true
but-settings.workspace = true
gitbutler-stack.workspace = true
but-core.workspace = true
gitbutler-oxidize.workspace = true
but-workspace.workspace = true
but-hunk-dependency.workspace = true

gitbutler-commit = { workspace = true, optional = true, features = ["testing"] }

clap = { version = "4.5.23", features = ["derive", "env"] }
gix.workspace = true
anyhow.workspace = true
itertools = "0.14.0"
tracing-forest = { version = "0.1.6" }
tracing-subscriber.workspace = true
tracing.workspace = true
dirs-next = "2.0.0"
