[package]
name = "but-codex"
version = "0.0.0"
edition.workspace = true
authors.workspace = true
publish = false
rust-version.workspace = true

[lib]
doctest = false

[dependencies]
but-action.workspace = true
but-claude.workspace = true
but-ctx.workspace = true

anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
shell-words.workspace = true
uuid.workspace = true

[lints]
workspace = true
