[package]
name = "but-core"
version = "0.0.0"
edition = "2024"
authors = ["GitButler <gitbutler@gitbutler.com>"]
publish = false
rust-version = "1.89"

[lib]
doctest = false

[features]
# Set when building in test-mode to enable features that help with generating repeatable tests.
testing = []

[dependencies]
but-error.workspace = true
gitbutler-serde.workspace = true

serde.workspace = true
bstr.workspace = true
tracing.workspace = true
anyhow.workspace = true
gix = { workspace = true, features = [
    "dirwalk",
    "credentials",
    "parallel",
    "serde",
    "status",
] }
uuid.workspace = true
toml.workspace = true
chardetng = "0.1.17"

# for locking
fslock = "0.2.1"
parking_lot = { workspace = true, features = ["arc_lock"] }

[dev-dependencies]
but-testsupport.workspace = true
gix = { workspace = true, features = ["revision"] }
serde_json = "1.0"
insta.workspace = true
