[package]
name = "but-core"
version = "0.0.0"
edition.workspace = true
authors.workspace = true
publish = false
rust-version.workspace = true
description = "A leaf-crate with core algorithms and types"

[lib]
doctest = false

[features]
# Set when building in test-mode to enable features that help with generating repeatable tests.
testing = []
export-ts = []

[dependencies]
but-error.workspace = true
but-serde.workspace = true

# for safe-checkout
git2.workspace = true
but-oxidize.workspace = true

serde.workspace = true
bstr.workspace = true
tracing.workspace = true
anyhow.workspace = true
gix = { workspace = true, features = [
    "dirwalk",
    "credentials",
    "parallel",
    "serde",
    "status",
    "merge"
] }
# for V1 conflict commits
toml.workspace = true
chardetng = "0.1.17"

# for `id`
uuid.workspace = true

# for `sync`
fslock = "0.2.1"
parking_lot = { workspace = true, features = ["arc_lock"] }
ts-rs.workspace = true

[dev-dependencies]
but-testsupport.workspace = true
gix = { workspace = true, features = ["revision"] }
serde_json = "1.0"
insta.workspace = true
