[package]
name = "but-ctx"
version = "0.0.0"
edition = "2024"
authors = ["GitButler <gitbutler@gitbutler.com>"]
publish = false
description = "A context implementation specific to a repository"
rust-version = "1.89"

[lib]
doctest = false
test = true

[features]
# Support for a built-in legacy project.
legacy = ["dep:gitbutler-project", "dep:tracing"]

[dependencies]
but-core.workspace = true
but-settings.workspace = true
but-meta = { workspace = true, features = ["legacy"] }
but-db.workspace = true
but-graph.workspace = true

gitbutler-project = { workspace = true, optional = true }

tracing = { workspace = true, optional = true }
anyhow.workspace = true
gix.workspace = true
git2.workspace = true
