[package]
name = "but-ctx"
version = "0.0.0"
edition.workspace = true
authors.workspace = true
publish = false
description = "A context implementation specific to a repository"
rust-version.workspace = true

[lib]
doctest = false
test = true

[features]
# Support for a built-in legacy project.
legacy = ["dep:gitbutler-project", "but-project-handle/legacy"]

[dependencies]
but-path.workspace = true
but-core.workspace = true
but-settings.workspace = true
# Legacy is needed here for our only RefMetadata implementation that adapts `virtual-branches.toml`.
but-meta = { workspace = true, features = ["legacy"] }
but-db.workspace = true
but-graph.workspace = true
but-project-handle.workspace = true

# Optional so `but-ctx` can stay decoupled from legacy project storage by default.
gitbutler-project = { workspace = true, optional = true }

tracing.workspace = true
anyhow.workspace = true
but-error.workspace = true
gix.workspace = true
git2.workspace = true

[dev-dependencies]
but-testsupport.workspace = true
serde_json.workspace = true

[lints]
workspace = true
