[package]
name = "but-cursor"
version = "0.0.0"
edition.workspace = true
authors.workspace = true
publish = false
rust-version.workspace = true

[lib]
doctest = false

[dependencies]
but-workspace = {workspace = true, features = ["legacy"] }
but-claude.workspace = true # Move out get_or_create_session and remove this dependency
but-meta = { workspace = true, features = ["legacy"] }
but-action.workspace = true
but-hunk-assignment.workspace = true
but-core.workspace = true
but-ctx.workspace = true

gitbutler-project.workspace = true
gitbutler-stack.workspace = true

anyhow.workspace = true
serde.workspace = true
md5.workspace = true
diesel = { version = "2.3.4", features = ["sqlite"] }
serde_json.workspace = true
gix = { workspace = true, features = [] }
