[package]
name = "but-db"
version = "0.0.0"
edition.workspace = true
authors.workspace = true
publish = false
rust-version.workspace = true

[lib]
doctest = false
test = false

[dependencies]
diesel = { version = "2.3.5", features = [
    "sqlite",
    "returning_clauses_for_sqlite_3_35",
    "chrono",
] }
# Bundled rusqlite for Windows, and exactly this version to match the one of `diesel`!
# `rusqlite` is used for running SQLite migrations and other low-level operations,
# exposing a rusty API for sqlite, while using `libsqlite3-sys`@v0.30,
# which is needed by diesel for the main database operations.
rusqlite = { version = "0.32.1", features = ["bundled"] }
bitflags.workspace = true
serde.workspace = true
anyhow.workspace = true
chrono = { workspace = true, features = ["serde"] }
# other things
tokio = { workspace = true, features = ["rt-multi-thread", "parking_lot", "time", "sync", "macros"] }
tracing.workspace = true
backoff.workspace = true

[dev-dependencies]
tempfile = "3.24.0"
insta.workspace = true

# for multi-process migration testing.
[target."cfg(unix)".dev-dependencies]
libc = "0.2.180"
