[package]
name = "but-engineering"
version = "0.0.0"
edition.workspace = true
authors.workspace = true
publish = false
rust-version.workspace = true

[[bin]]
name = "but-engineering"
path = "src/main.rs"

[lib]
doctest = false

[dependencies]
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
rusqlite = { workspace = true, features = ["bundled", "chrono"] }
gix = { workspace = true, default-features = false, features = ["max-performance-safe"] }
ulid = "1.1"
chrono = { workspace = true, features = ["serde"] }
anyhow.workspace = true
ratatui = "0.29"
crossterm = "0.28"
unicode-width = "0.2"

[dev-dependencies]
tempfile.workspace = true
