[package]
name = "but-error"
version = "0.0.0"
edition.workspace = true
authors.workspace = true
publish = false
rust-version.workspace = true

[package.metadata.cargo-machete]
ignored = ["but-schemars", "schemars"]

[lib]
doctest = true

[features]
export-schema = ["dep:schemars", "dep:but-schemars"]

[dependencies]
anyhow.workspace = true
but-api-macros.workspace = true
serde.workspace = true
schemars = { workspace = true, optional = true }
but-schemars = { workspace = true, optional = true }

[lints]
workspace = true
